--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,11 @@
     <title>React App</title>
   </head>
   <body>
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+  <script src="https://code.jquery.com/jquery.js"></script>
+  <!-- Include all compiled plugins (below), or include individual files 
+        as needed -->
+  <script src="js/bootstrap.min.js"></script>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
